--- a/index.html
+++ b/index.html
@@ -4,8 +4,203 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mix Ejercicios Js + Html + Css</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Ejercicio 1 -->
+<div class="ejercicio">
+    <h2>1. Filtrar Números Pares</h2>
+    <button onclick="generarNumeros()">Generar números</button>
+    <button onclick="mostrarPares()">Mostrar Pares</button>
     
+    <div class="resultado">
+        <p id="numerosArray"></p>
+        <p id="pares"></p>
+    </div>
+</div>
+
+<!-- Ejercicio 2 -->
+<div class="ejercicio">
+    <h2>2. Calcular promedio</h2>
+    <button onclick="calcularPromedio()">Calcular promedio</button>
+    <div class="resultado">
+        <p id="notasArray"></p>
+        <p id="promedio"></p>
+    </div>
+</div>
+
+ <!-- Ejercicio 3 -->
+ <div class="ejercicio">
+    <h2>3. Imprimir con Delay</h2>
+    <button onclick="imprimirConRetraso()">Iniciar</button>
+    <div class="resultado">
+    <p id="array3"></p>
+</div>
+  </div>
+  
+ <!-- Ejercicio 4 -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+<!-- Ejercicio 5 -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">       
+        
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+
+
+
+</div>
+  </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
