base de ejercicios

--- a/index.html
+++ b/index.html
@@ -36,169 +36,222 @@
     <button onclick="imprimirConRetraso()">Iniciar</button>
     <div class="resultado">
     <p id="array3"></p>
-</div>
+    </div>
   </div>
   
  <!-- Ejercicio 4 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>4. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">
-
+    </div>
+</div>
 <!-- Ejercicio 5 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>5. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">
-
- <!-- Ejercicio  -->
+</div>
+</div>
+ <!-- Ejercicio 6 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>6. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">
-
- <!-- Ejercicio  -->
+</div>
+</div>
+ <!-- Ejercicio 7 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>7. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">
-
- <!-- Ejercicio  -->
+</div>
+</div>
+ <!-- Ejercicio 8 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>8. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">
-
- <!-- Ejercicio  -->
+</div>
+</div>
+ <!-- Ejercicio 9 -->
  <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
+    <h2>9. titulo ejercicio</h2>
     <button onclick="">Iniciar</button>
     <div class="resultado">       
-        
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
- <!-- Ejercicio  -->
- <div class="ejercicio">
-    <h2>X. titulo ejercicio</h2>
-    <button onclick="">Iniciar</button>
-    <div class="resultado">
-
-
-
+</div>     
 </div>
-  </div>
+ <!-- Ejercicio 10 -->
+ <div class="ejercicio">
+    <h2>10. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">       
+</div>     
+</div>
+ <!-- Ejercicio 11 -->
+ <div class="ejercicio">
+    <h2>11. Cambiar fondo de parrafos.</h2>
+    <button onclick="cambiarFondo()">Cambiar</button>
+    <button onclick="restaurarFondo()">Volver</button>
+    <div class="resultado">
+        <p class="e10">Lorem ipsum dolor sit amet.</p>
+        <p class="e10">Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+        <p class="e10">Lorem ipsum dolor sit amet consectetur.</p>
+</div>
+</div>
+
+ <!-- Ejercicio  12-->
+ <div class="ejercicio">
+    <h2>12. Validacion de formulario</h2>
+<div class="resultado">
+
+    <!-- input email-->
+    <label for="Email">Email: </label>
+    <input type="email" name="@" id="email_e11" placeholder="email@test.com"> 
+    <label id="errorEmail" class="error12"></label>
+
+    <br>
+
+    <!-- input nombre-->
+    <label for="Nombre">Nombre: </label>
+    <input type="text" id="nombre_e11" placeholder="Tralalero Tralala">
+    <label id="errorNombre" class="error12"></label>
+    <br>
+</div>
+<button onclick="validar()">Enviar</button>
+</div>
+
+
+ <!-- Ejercicio  13-->
+ <div class="ejercicio">
+       <h2>13. Lista de tareas</h2>
+    <input type="tarea" id="nuevaTarea" placeholder="Nueva tarea">
+    <button onclick="agregarTarea()">Agregar</button>
+    <ul class="resultado" id="listaElementos">
+    </ul>
+</div>
+
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+ <!-- Ejercicio  -->
+ <div class="ejercicio">
+    <h2>X. titulo ejercicio</h2>
+    <button onclick="">Iniciar</button>
+    <div class="resultado">
+</div>
+</div>
+
+
 
 
     <script src="script.js"></script>
